src/lua/lua.odin

package lua

import core "../core"
import "base:runtime"
import "core:c"
import "core:mem"

// Basic types
State :: distinct rawptr
CFunction :: #type proc "c" (L: ^State) -> c.int

// Constants
LUA_MULTRET :: -1
LUA_YIELD :: 1
LUA_ERRERR :: 5

LUA_VERSION :: "Lua 5.1"
LUA_RELEASE :: "Luam"

LUA_GCSTOP :: 0
LUA_GCRESTART :: 1
LUA_GCCOLLECT :: 2
LUA_GCCOUNT :: 3
LUA_GCCOUNTB :: 4
LUA_GCSTEP :: 5
LUA_GCSETPAUSE :: 6
LUA_GCSETSTEPMUL :: 7

LUA_HOOKCALL :: 0
LUA_HOOKRET :: 1
LUA_HOOKLINE :: 2
LUA_HOOKCOUNT :: 3
LUA_HOOKTAILRET :: 4

LUA_MASKCALL :: (1 << LUA_HOOKCALL)
LUA_MASKRET :: (1 << LUA_HOOKRET)
LUA_MASKLINE :: (1 << LUA_HOOKLINE)
LUA_MASKCOUNT :: (1 << LUA_HOOKCOUNT)

LUA_FILEHANDLE :: "FILE*"

LUA_NUMBER_SCAN :: "%lf"
LUA_NUMBER_FMT :: "%.14g"

// Dynamic library bindings
foreign import liblua "system:c"
foreign import libc "system:c"

@(default_calling_convention = "c")
foreign libc {
	fopen :: proc(filename: cstring, mode: cstring) -> rawptr ---
	fclose :: proc(stream: rawptr) -> c.int ---
	fflush :: proc(stream: rawptr) -> c.int ---
	fread :: proc(ptr: rawptr, size: c.size_t, nmemb: c.size_t, stream: rawptr) -> c.size_t ---
	fwrite :: proc(ptr: rawptr, size: c.size_t, nmemb: c.size_t, stream: rawptr) -> c.size_t ---
	fseek :: proc(stream: rawptr, offset: c.long, whence: c.int) -> c.int ---
	ftell :: proc(stream: rawptr) -> c.long ---
	setvbuf :: proc(stream: rawptr, buf: [^]u8, mode: c.int, size: c.size_t) -> c.int ---
	fprintf :: proc(stream: rawptr, format: cstring, #c_vararg args: ..any) -> c.int ---
	fscanf :: proc(stream: rawptr, format: cstring, #c_vararg args: ..any) -> c.int ---
	getc :: proc(stream: rawptr) -> c.int ---
	ungetc :: proc(ch: c.int, stream: rawptr) -> c.int ---
	getenv :: proc(name: cstring) -> cstring ---

	// dynamic loading
	dlopen :: proc(filename: cstring, flag: c.int) -> rawptr ---
	dlclose :: proc(handle: rawptr) -> c.int ---
	dlsym :: proc(handle: rawptr, symbol: cstring) -> rawptr ---
	dlerror :: proc() -> cstring ---
	fgets :: proc(s: [^]u8, n: c.int, stream: rawptr) -> [^]u8 ---
	popen :: proc(command: cstring, mode: cstring) -> rawptr ---
	pclose :: proc(stream: rawptr) -> c.int ---
	tmpfile :: proc() -> rawptr ---
	clearerr :: proc(stream: rawptr) ---
	ferror :: proc(stream: rawptr) -> c.int ---
	feof :: proc(stream: rawptr) -> c.int ---
	strerror :: proc(errnum: c.int) -> cstring ---

	luaL_get_stdin :: proc() -> rawptr ---
	luaL_get_stdout :: proc() -> rawptr ---
	luaL_get_stderr :: proc() -> rawptr ---
}

@(default_calling_convention = "c")
foreign liblua {
	// lua_pushcclosure :: proc(L: ^State, fn: CFunction, n: c.int) ---
	// lua_pushstring :: proc(L: ^State, s: cstring) ---
	// lua_pushlstring :: proc(L: ^State, s: cstring, len: c.size_t) ---
	// lua_call :: proc(L: ^State, nargs: c.int, nresults: c.int) ---
	// lua_pushvalue :: proc(L: ^State, idx: c.int) ---
	// lua_settop :: proc(L: ^State, idx: c.int) ---
	// lua_replace :: proc(L: ^State, idx: c.int) ---
	// lua_gettable :: proc(L: ^State, idx: c.int) ---
	// lua_settable :: proc(L: ^State, idx: c.int) ---
	// lua_toboolean :: proc(L: ^State, idx: c.int) -> c.int ---
	// lua_tointeger :: proc(L: ^State, idx: c.int) -> Integer ---
	// lua_tonumber :: proc(L: ^State, idx: c.int) -> Number ---
	// lua_tolstring :: proc(L: ^State, idx: c.int, len: ^c.size_t) -> cstring ---
	// lua_objlen :: proc(L: ^State, idx: c.int) -> c.size_t ---
	// lua_next :: proc(L: ^State, idx: c.int) -> c.int ---
	// lua_rawget :: proc(L: ^State, idx: c.int) ---
	// lua_rawset :: proc(L: ^State, idx: c.int) ---
	// lua_rawequal :: proc(L: ^State, idx1: c.int, idx2: c.int) -> c.int ---
	// lua_rawgeti :: proc(L: ^State, idx: c.int, n: c.int) ---
	// lua_rawseti :: proc(L: ^State, idx: c.int, n: c.int) ---
	// lua_lessthan :: proc(L: ^State, idx1: c.int, idx2: c.int) -> c.int ---
	// lua_typename :: proc(L: ^State, tp: c.int) -> cstring ---
	// lua_topointer :: proc(L: ^State, idx: c.int) -> rawptr ---
	// lua_tothread :: proc(L: ^State, idx: c.int) -> ^State ---
	// lua_newthread :: proc(L: ^State) -> ^State ---
	// lua_setfield :: proc(L: ^State, idx: c.int, k: cstring) ---
	// lua_getfield :: proc(L: ^State, idx: c.int, k: cstring) ---
	// lua_createtable :: proc(L: ^State, narr, nrec: c.int) ---
	// lua_newuserdata :: proc(L: ^State, size: c.size_t) -> rawptr ---
	// lua_getmetatable :: proc(L: ^State, objindex: c.int) -> c.int ---
	// lua_setmetatable :: proc(L: ^State, objindex: c.int) -> c.int ---
	// lua_type :: proc(L: ^State, idx: c.int) -> c.int ---

	// @(link_name = "lua_isnumber")
	// _lua_isnumber :: proc(L: ^State, idx: c.int) -> c.int ---
	// lua_atpanic :: proc(L: ^State, panicf: CFunction) -> CFunction ---
	// @(link_name = "lua_isstring")
	// _lua_isstring :: proc(L: ^State, idx: c.int) -> c.int ---
	// @(link_name = "lua_iscfunction")
	// _lua_iscfunction :: proc(L: ^State, idx: c.int) -> c.int ---
	// @(link_name = "lua_isuserdata")
	// _lua_isuserdata :: proc(L: ^State, idx: c.int) -> c.int ---

	// lua_touserdata :: proc(L: ^State, idx: c.int) -> rawptr ---
	// lua_concat :: proc(L: ^State, n: c.int) ---
	// lua_pushnumber :: proc(L: ^State, n: Number) ---
	lua_pushfstring :: proc(L: ^State, format: cstring, #c_vararg args: ..any) -> cstring ---
	lua_pushvfstring :: proc(L: ^State, fmt: cstring, argp: c.va_list) -> cstring ---
	// lua_pushinteger :: proc(L: ^State, n: Integer) ---
	// lua_pushnil :: proc(L: ^State) ---
	// lua_pushboolean :: proc(L: ^State, b: c.int) ---
	// lua_pushlightuserdata :: proc(L: ^State, p: rawptr) ---
	// lua_pcall :: proc(L: ^State, nargs: c.int, nresults: c.int, errfunc: c.int) -> c.int ---
	// lua_cpcall :: proc(L: ^State, func: CFunction, ud: rawptr) -> c.int ---
	// lua_close :: proc(L: ^State) ---
	// lua_insert :: proc(L: ^State, idx: c.int) ---
	// lua_remove :: proc(L: ^State, idx: c.int) ---
	// lua_checkstack :: proc(L: ^State, sz: c.int) -> c.int ---
	// lua_setfenv :: proc(L: ^State, idx: c.int) -> c.int ---
	// lua_getfenv :: proc(L: ^State, idx: c.int) ---
	lua_getstack :: proc(L: ^State, level: c.int, ar: ^Debug) -> c.int ---
	lua_getinfo :: proc(L: ^State, what: cstring, ar: ^Debug) -> c.int ---
	lua_getlocal :: proc(L: ^State, ar: ^Debug, n: c.int) -> cstring ---
	lua_setlocal :: proc(L: ^State, ar: ^Debug, n: c.int) -> cstring ---
	// lua_getupvalue :: proc(L: ^State, funcindex: c.int, n: c.int) -> cstring ---
	// lua_setupvalue :: proc(L: ^State, funcindex: c.int, n: c.int) -> cstring ---
	lua_sethook :: proc(L: ^State, func: Hook, mask: c.int, count: c.int) -> c.int ---
	lua_gethook :: proc(L: ^State) -> Hook ---
	lua_gethookmask :: proc(L: ^State) -> c.int ---
	lua_gethookcount :: proc(L: ^State) -> c.int ---
	// lua_error :: proc(L: ^State) -> c.int ---
	// lua_load :: proc(L: ^State, reader: Reader, dt: rawptr, chunkname: cstring) -> c.int ---
	// lua_setlevel :: proc(from: ^State, to: ^State) ---
	// lua_xmove :: proc(from: ^State, to: ^State, n: c.int) ---
	// lua_pushthread :: proc(L: ^State) -> c.int ---
	lua_resume :: proc(Co: ^State, narg: c.int) -> c.int ---
	lua_yield :: proc(L: ^State, nresults: c.int) -> c.int ---

	luaL_register :: proc(L: ^State, libname: cstring, l: ^Reg) ---
	luaL_checkstack :: proc(L: ^State, sz: c.int, msg: cstring) ---
	luaL_checknumber :: proc(L: ^State, numArg: c.int) -> Number ---
	luaL_checkinteger :: proc(L: ^State, numArg: c.int) -> Integer ---
	luaL_optinteger :: proc(L: ^State, nArg: c.int, def: Integer) -> Integer ---
	luaL_optlstring :: proc(L: ^State, narg: c.int, d: cstring, l: ^c.size_t) -> cstring ---
	luaL_checklstring :: proc(L: ^State, narg: c.int, l: ^c.size_t) -> cstring ---
	luaL_checktype :: proc(L: ^State, narg: c.int, t: c.int) ---
	luaL_checkany :: proc(L: ^State, narg: c.int) ---
	luaL_checkudata :: proc(L: ^State, narg: c.int, tname: cstring) -> rawptr ---
	luaL_argerror :: proc(L: ^State, narg: c.int, extramsg: cstring) -> c.int ---
	luaL_where :: proc(L: ^State, lvl: c.int) ---
	luaL_error :: proc(L: ^State, fmt: cstring, #c_vararg args: ..any) -> c.int ---
	luaL_loadfile :: proc(L: ^State, filename: cstring) -> c.int ---
	luaL_loadbuffer :: proc(L: ^State, buff: cstring, sz: c.size_t, name: cstring) -> c.int ---
	luaL_getmetafield :: proc(L: ^State, obj: c.int, e: cstring) -> c.int ---
	luaL_callmeta :: proc(L: ^State, obj: c.int, e: cstring) -> c.int ---
	luaL_checkoption :: proc(L: ^State, narg: c.int, def: cstring, lst: [^]cstring) -> c.int ---
	luaL_newmetatable :: proc(L: ^State, tname: cstring) -> c.int ---
	luaL_ref :: proc(L: ^State, t: c.int) -> c.int ---
	luaL_unref :: proc(L: ^State, t: c.int, ref: c.int) ---
	luaL_gsub :: proc(L: ^State, s: cstring, p: cstring, r: cstring) -> cstring ---
	luaL_findtable :: proc(L: ^State, idx: c.int, fname: cstring, szhint: c.int) -> cstring ---

	luaL_buffinit :: proc(L: ^State, B: ^Buffer) ---
	luaL_prepbuffer :: proc(B: ^Buffer) -> [^]u8 ---
	luaL_addlstring :: proc(B: ^Buffer, s: cstring, l: c.size_t) ---
	luaL_addstring :: proc(B: ^Buffer, s: cstring) ---
	luaL_addvalue :: proc(B: ^Buffer) ---
	luaL_pushresult :: proc(B: ^Buffer) ---

	// lua_dump :: proc(L: ^State, writer: Writer, data: rawptr) -> c.int ---
	sprintf :: proc(s: [^]u8, format: cstring, #c_vararg args: ..any) -> c.int ---

	// Standard Library Open Functions
	luaopen_base :: proc(L: ^State) -> c.int ---
	luaopen_package :: proc(L: ^State) -> c.int ---
	luaopen_table :: proc(L: ^State) -> c.int ---
	luaopen_io :: proc(L: ^State) -> c.int ---
	luaopen_os :: proc(L: ^State) -> c.int ---
	luaopen_string :: proc(L: ^State) -> c.int ---
	luaopen_math :: proc(L: ^State) -> c.int ---
	luaopen_debug :: proc(L: ^State) -> c.int ---
	luaopen_bit :: proc(L: ^State) -> c.int ---
	luaopen_struct :: proc(L: ^State) -> c.int ---
}

// Ported API Wrappers
lua_type :: #force_inline proc "c" (L: ^State, idx: c.int) -> c.int {
	context = runtime.default_context()
	return core.lua_type(cast(^core.lua_State)L, idx)
}
lua_typename :: #force_inline proc "c" (L: ^State, tp: c.int) -> cstring {
	context = runtime.default_context()
	return core.lua_typename(cast(^core.lua_State)L, tp)
}
lua_gettop :: #force_inline proc "c" (L: ^State) -> c.int {
	context = runtime.default_context()
	return core.lua_gettop(cast(^core.lua_State)L)
}
lua_settop :: #force_inline proc "c" (L: ^State, idx: c.int) {
	context = runtime.default_context()
	core.lua_settop(cast(^core.lua_State)L, idx)
}
lua_pushvalue :: #force_inline proc "c" (L: ^State, idx: c.int) {
	context = runtime.default_context()
	core.lua_pushvalue(cast(^core.lua_State)L, idx)
}
lua_remove :: #force_inline proc "c" (L: ^State, idx: c.int) {
	context = runtime.default_context()
	core.lua_remove(cast(^core.lua_State)L, idx)
}
lua_insert :: #force_inline proc "c" (L: ^State, idx: c.int) {
	context = runtime.default_context()
	core.lua_insert(cast(^core.lua_State)L, idx)
}
lua_replace :: #force_inline proc "c" (L: ^State, idx: c.int) {
	context = runtime.default_context()
	core.lua_replace(cast(^core.lua_State)L, idx)
}
lua_checkstack :: #force_inline proc "c" (L: ^State, sz: c.int) -> c.int {
	context = runtime.default_context()
	return core.lua_checkstack(cast(^core.lua_State)L, sz)
}
lua_xmove :: #force_inline proc "c" (from: ^State, to: ^State, n: c.int) {
	context = runtime.default_context()
	core.lua_xmove(cast(^core.lua_State)from, cast(^core.lua_State)to, n)
}
lua_toboolean :: #force_inline proc "c" (L: ^State, idx: c.int) -> c.int {
	context = runtime.default_context()
	return core.lua_toboolean(cast(^core.lua_State)L, idx)
}
lua_tonumber :: #force_inline proc "c" (L: ^State, idx: c.int) -> Number {
	context = runtime.default_context()
	return cast(Number)core.lua_tonumber(cast(^core.lua_State)L, idx)
}
lua_tointeger :: #force_inline proc "c" (L: ^State, idx: c.int) -> Integer {
	context = runtime.default_context()
	return cast(Integer)core.lua_tointeger(cast(^core.lua_State)L, idx)
}
